Rename misleading map search arguments.